--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "eslint": "8.55.0",
     "eslint-config-next": "14.0.3",
     "typescript": "5.3.2"
+  },
+  "engines": {
+    "node": "18.17.1"
   }
 }
