--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
     "next": "14.0.3",
+    "postcss": "^8.4.32",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.3.5"
